docs: Fix Horizontal Scroll Overflow in Rule Description on Mobile View

--- a/docs/src/assets/scss/components/rules.scss
+++ b/docs/src/assets/scss/components/rules.scss
@@ -87,6 +87,8 @@
 
 .rule__content {
     flex: 1 1 35ch;
+    overflow-x: auto;
+
 }
 
 .rule__name_wrapper {
